# BlipLang

./: .gitignore  CMakeLists.txt  README.md  input.txt  production.txt
include/: parser.h  tokenization.h
src/: lexer.l  main.cpp  parser.cpp  tokenization.cpp
